--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
         ],
       "git.enabled":true,
 
-      "git.path":"c:\\git.exe"
+      "git.path":"c:\\path\\to\\git.exe"
     }
     
     
